--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "private": true,
   "scripts": {
     "build": "nuxi build",
-    "dev": "nuxi dev",
+    "dev": "nuxt dev",
     "start": "node .nuxt/dist/server/server.mjs",
     "lint": "eslint .",
     "preview": "nuxi preview"
